--- a/src/main/resources/com/group/p2_socializer/choose_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/choose_gathering.fxml
@@ -30,11 +30,11 @@
          <children>
             <HBox maxHeight="548.0" maxWidth="796.0" minHeight="431.0" minWidth="796.0" prefHeight="548.0" prefWidth="796.0">
                <children>
-                  <VBox fx:id="eventGatheringVBox" maxHeight="501.0" maxWidth="252.0" minHeight="501.0" minWidth="252.0" onMouseClicked="#openCalendarTab" prefHeight="501.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
+                  <VBox fx:id="eventGatheringVBox" maxHeight="501.0" maxWidth="252.0" minHeight="501.0" minWidth="252.0" onMouseClicked="#openCalendarTab" prefHeight="501.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;" stylesheets="@style.css">
                      <children>
                         <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Event Gathering" textAlignment="CENTER">
                            <font>
-                              <Font size="20.0" />
+                              <Font name="System Bold" size="21.0" />
                            </font></Label>
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 2" />
@@ -49,11 +49,11 @@
                         <Insets right="10.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox fx:id="customGatheringVBox" maxHeight="501.0" maxWidth="252.0" minHeight="501.0" minWidth="252.0" onMouseClicked="#handleCustomGatheringCreation" prefHeight="501.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
+                  <VBox fx:id="customGatheringVBox" maxHeight="501.0" maxWidth="252.0" minHeight="501.0" minWidth="252.0" onMouseClicked="#handleCustomGatheringCreation" prefHeight="501.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;" stylesheets="@style.css">
                      <children>
                         <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Custom Gathering" textAlignment="CENTER">
                            <font>
-                              <Font size="20.0" />
+                              <Font name="System Bold" size="21.0" />
                            </font></Label>
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 2" />
@@ -68,11 +68,11 @@
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox fx:id="preDefinedGatheringVBox" maxHeight="501.0" maxWidth="252.0" minHeight="501.0" minWidth="252.0" onMouseClicked="#handlePremadeGatheringCreation" prefHeight="501.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
+                  <VBox fx:id="preDefinedGatheringVBox" maxHeight="501.0" maxWidth="252.0" minHeight="501.0" minWidth="252.0" onMouseClicked="#handlePremadeGatheringCreation" prefHeight="501.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;" stylesheets="@style.css">
                      <children>
                         <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Pre-defined Gathering">
                            <font>
-                              <Font size="20.0" />
+                              <Font name="System Bold" size="21.0" />
                            </font></Label>
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 2" />
