--- a/src/main/resources/com/group/p2_socializer/style.css
+++ b/src/main/resources/com/group/p2_socializer/style.css
@@ -1,23 +1,3 @@
-.trendingButtonColor:hover{
-    -fx-border-color: #660099;
-    -fx-border-width: 0px 0px 3px 0px;
-}
-.calendarButtonColor:hover{
-    -fx-border-color: #67F3FF;
-    -fx-border-width: 0px 0px 3px 0px;
-}
-.groupsButtonColor:hover{
-    -fx-border-color: #FF4038;
-    -fx-border-width: 0px 0px 3px 0px;
-}
-.createButtonColor:hover{
-    -fx-border-color: #EFFF39;
-    -fx-border-width: 0px 0px 3px 0px;
-}
-.profileButtonColor:hover{
-    -fx-border-color: #28FF06;
-    -fx-border-width: 0px 0px 3px 0px;
-}
 
 .eventGatheringVBox {
     -fx-border-color: black;
@@ -33,4 +13,22 @@
     -fx-border-color: black;
     -fx-border-width: 1px;
     -fx-border-style: solid;
+}
+#eventGatheringVBox:hover {
+    -fx-background-color: lightgray; /* Change the background color on hover */
+    -fx-cursor: hand; /* Change the cursor to a hand pointer on hover */
+    -fx-background-color: rgba(0, 0, 0, 0.2); /* Use an rgba value for the background color with alpha (opacity) set to 0.2 for a faded effect */
+    -fx-transition: background-color 0.7s ease; /* Add a transition effect with a duration of 0.3s and an ease timing function for a smooth effect */
+}
+#preDefinedGatheringVBox:hover {
+    -fx-background-color: lightgray;
+    -fx-cursor: hand;
+    -fx-background-color: rgba(0, 0, 0, 0.2);
+    -fx-transition: background-color 0.7s ease;
+}
+#customGatheringVBox:hover {
+    -fx-background-color: lightgray;
+    -fx-cursor: hand;
+    -fx-background-color: rgba(0, 0, 0, 0.2);
+    -fx-transition: background-color 0.7s ease;
 }
