--- a/src/main/resources/com/group/p2_socializer/create_custom_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_custom_gathering.fxml
@@ -8,114 +8,106 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateGatherings.CreateGatheringController">
+<AnchorPane prefHeight="780.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateGatherings.CreateGatheringController">
    <children>
-      <BorderPane prefHeight="681.0" prefWidth="758.0">
-         <top>
-            <AnchorPane prefHeight="91.0" prefWidth="609.0" BorderPane.alignment="CENTER">
+      <Rectangle arcHeight="50" arcWidth="50.0" fill="TRANSPARENT" height="697.0" layoutX="209.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" style="-fx-stroke: #00bcd4;" width="533.0" />
+      <VBox layoutX="231.0" layoutY="117.0" prefHeight="618.0" prefWidth="490.0" spacing="10.0">
+         <children>
+            <Label text="Event name:" />
+            <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
+               <VBox.margin>
+                  <Insets right="90.0" />
+               </VBox.margin>
+            </JFXTextField>
+            <HBox prefHeight="15.0" prefWidth="409.0">
                <children>
-                  <Label layoutX="14.0" prefHeight="91.0" prefWidth="434.0" text="Create Gathering" AnchorPane.leftAnchor="14.0">
-                     <font>
-                        <Font name="Eras Bold ITC" size="34.0" />
-                     </font>
+                  <Label text="Date:" />
+                  <Label text="Time:">
+                     <HBox.margin>
+                        <Insets left="215.0" />
+                     </HBox.margin>
                   </Label>
                </children>
-            </AnchorPane>
-         </top>
-         <center>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="409.0">
                <children>
-                  <VBox layoutX="63.0" prefHeight="561.0" prefWidth="623.0" spacing="10.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
-                     <children>
-                        <Label text="Event name:" />
-                        <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
-                           <VBox.margin>
-                              <Insets right="90.0" />
-                           </VBox.margin>
-                        </JFXTextField>
-                        <HBox prefHeight="15.0" prefWidth="409.0">
-                           <children>
-                              <Label text="Date:" />
-                              <Label text="Time:">
-                                 <HBox.margin>
-                                    <Insets left="215.0" />
-                                 </HBox.margin>
-                              </Label>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="20.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <HBox prefHeight="27.0" prefWidth="409.0">
-                           <children>
-                              <DatePicker fx:id="eventDatePicker" />
-                              <JFXTextField fx:id="eventTimeTextField">
-                                 <HBox.margin>
-                                    <Insets left="70.0" />
-                                 </HBox.margin>
-                              </JFXTextField>
-                           </children>
-                        </HBox>
-                        <HBox prefHeight="16.0" prefWidth="409.0">
-                           <children>
-                              <Label prefHeight="30.0" prefWidth="138.0" text="City:" />
-                              <Label prefHeight="27.0" prefWidth="86.0" text="Country:">
-                                 <HBox.margin>
-                                    <Insets left="110.0" />
-                                 </HBox.margin>
-                              </Label>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="20.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <HBox prefHeight="27.0" prefWidth="409.0">
-                           <children>
-                              <JFXTextField fx:id="eventCityTextField" promptText="eg. Copenhagen" />
-                              <JFXTextField fx:id="eventCountryTextField" promptText="eg. Denmark">
-                                 <HBox.margin>
-                                    <Insets left="110.0" />
-                                 </HBox.margin>
-                              </JFXTextField>
-                           </children>
-                        </HBox>
-                        <Label prefHeight="24.0" prefWidth="100.0" text="Event description:">
-                           <VBox.margin>
-                              <Insets top="20.0" />
-                           </VBox.margin>
-                        </Label>
-                        <JFXTextArea fx:id="eventDescriptionTextArea" prefHeight="135.0" prefWidth="409.0" promptText="eg. lots of text in here." />
-                        <HBox prefHeight="47.0" prefWidth="409.0">
-                           <children>
-                              <JFXCheckBox prefHeight="44.0" prefWidth="104.0" text="I am the organiser of this event" />
-                              <JFXTextField fx:id="eventOrganiserTextField" promptText="Organiser">
-                                 <HBox.margin>
-                                    <Insets left="60.0" top="8.0" />
-                                 </HBox.margin>
-                              </JFXTextField>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="20.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="99.0" prefWidth="409.0">
-                           <children>
-                              <JFXButton fx:id="createCustomGatheringButton" onAction="#handleCreateGathering" prefHeight="61.0" prefWidth="138.0" text="Create Gathering" />
-                           </children>
-                        </HBox>
-                     </children>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </VBox>
+                  <DatePicker fx:id="eventDatePicker" />
+                  <JFXTextField fx:id="eventTimeTextField" promptText="HH:mm">
+                     <HBox.margin>
+                        <Insets left="70.0" />
+                     </HBox.margin>
+                  </JFXTextField>
                </children>
-            </AnchorPane>
-         </center>
-      </BorderPane>
+            </HBox>
+            <HBox prefHeight="16.0" prefWidth="409.0">
+               <children>
+                  <Label prefHeight="30.0" prefWidth="138.0" text="City:" />
+                  <Label prefHeight="27.0" prefWidth="86.0" text="Country:">
+                     <HBox.margin>
+                        <Insets left="110.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="409.0">
+               <children>
+                  <JFXTextField fx:id="eventCityTextField" promptText="eg. Copenhagen" />
+                  <JFXTextField fx:id="eventCountryTextField" promptText="eg. Denmark">
+                     <HBox.margin>
+                        <Insets left="110.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+            </HBox>
+            <Label prefHeight="24.0" prefWidth="100.0" text="Event description:">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Label>
+            <JFXTextArea fx:id="eventDescriptionTextArea" prefHeight="101.0" prefWidth="490.0" promptText="eg. lots of text in here." />
+            <JFXButton fx:id="addTagsButton" alignment="CENTER" contentDisplay="CENTER" onAction="#handleAddTagsButton" prefHeight="35.0" prefWidth="90.0" style="-fx-background-color: #38FFF5;" text="Add Tags">
+               <VBox.margin>
+                  <Insets left="200.0" right="200.0" top="20.0" />
+               </VBox.margin>
+            </JFXButton>
+            <HBox prefHeight="47.0" prefWidth="409.0">
+               <children>
+                  <JFXCheckBox prefHeight="44.0" prefWidth="104.0" text="I am the organiser of this event" />
+                  <JFXTextField fx:id="eventOrganiserTextField" promptText="Organiser">
+                     <HBox.margin>
+                        <Insets left="60.0" top="8.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="95.0" prefWidth="490.0">
+               <children>
+                  <JFXButton fx:id="createCustomGatheringButton" onAction="#handleCreateGathering" prefHeight="61.0" prefWidth="138.0" style="-fx-background-color: #41FF31;" text="Create Gathering" />
+               </children>
+            </HBox>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </VBox>
+      <Label alignment="CENTER" layoutX="375.0" layoutY="50.0" prefHeight="61.0" prefWidth="200.0" text="Create Gathering">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
