--- a/src/main/resources/com/group/p2_socializer/gathering_item.fxml
+++ b/src/main/resources/com/group/p2_socializer/gathering_item.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="168.0" fitWidth="672.0">
          <image>
-            <Image url="@bannerpic.jpg" />
+            <Image url="@pictures/bannerpic.jpg" />
          </image>
          <VBox.margin>
             <Insets left="20.0" right="13.0" top="20.0" />
