--- a/src/main/resources/com/group/p2_socializer/event_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/event_page.fxml
@@ -28,8 +28,6 @@
                               <Image url="@pictures/festivalpic.png" />
                            </image>
                         </ImageView>
-                        <JFXButton layoutX="120.0" layoutY="411.0" prefHeight="29.0" prefWidth="86.0" ripplerFill="#7bce3c" text="Attend Event" wrapText="true" />
-                        <JFXButton layoutX="28.0" layoutY="411.0" prefHeight="29.0" prefWidth="75.0" ripplerFill="#7bce3c" text="Interested" wrapText="true" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="285.0" layoutX="368.0" layoutY="445.0" stroke="BLACK" strokeType="INSIDE" width="226.0" />
                         <JFXTextArea layoutX="369.0" layoutY="730.0" prefHeight="35.0" prefWidth="227.0" promptText="Chat" />
                         <VBox fx:id="eventInfoVBox" layoutX="36.0" layoutY="312.0" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="26.0">
@@ -58,6 +56,8 @@
                               <Font name="System Bold" size="21.0" />
                            </font>
                         </Label>
+                        <JFXButton layoutX="190.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #71FF60;" text="Attend Event" wrapText="true" />
+                        <JFXButton layoutX="66.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #E2FF71;" text="Interested" wrapText="true" />
                      </children>
                   </AnchorPane>
                </center>
