--- a/src/main/resources/com/group/p2_socializer/create_event.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_event.fxml
@@ -18,93 +18,6 @@
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="780.0" prefWidth="950.0">
          <children>
             <Rectangle arcHeight="50" arcWidth="50.0" fill="TRANSPARENT" height="697.0" layoutX="209.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" style="-fx-stroke: #00bcd4;" width="533.0" />
-            <VBox layoutX="231.0" layoutY="117.0" prefHeight="618.0" prefWidth="490.0" spacing="10.0">
-               <children>
-                  <Label text="Event name:" />
-                  <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
-                     <VBox.margin>
-                        <Insets right="90.0" />
-                     </VBox.margin>
-                  </JFXTextField>
-                  <HBox prefHeight="15.0" prefWidth="409.0">
-                     <children>
-                        <Label text="Date:" />
-                        <Label text="Time:">
-                           <HBox.margin>
-                              <Insets left="215.0" />
-                           </HBox.margin>
-                        </Label>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox prefHeight="27.0" prefWidth="409.0">
-                     <children>
-                        <DatePicker fx:id="eventDatePicker" />
-                        <JFXTextField fx:id="eventTimeTextField" promptText="HH:mm">
-                           <HBox.margin>
-                              <Insets left="70.0" />
-                           </HBox.margin>
-                        </JFXTextField>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="16.0" prefWidth="409.0">
-                     <children>
-                        <Label prefHeight="30.0" prefWidth="138.0" text="City:" />
-                        <Label prefHeight="27.0" prefWidth="86.0" text="Country:">
-                           <HBox.margin>
-                              <Insets left="110.0" />
-                           </HBox.margin>
-                        </Label>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox prefHeight="27.0" prefWidth="409.0">
-                     <children>
-                        <JFXTextField fx:id="eventCityTextField" promptText="eg. Copenhagen" />
-                        <JFXTextField fx:id="eventCountryTextField" promptText="eg. Denmark">
-                           <HBox.margin>
-                              <Insets left="110.0" />
-                           </HBox.margin>
-                        </JFXTextField>
-                     </children>
-                  </HBox>
-                  <Label prefHeight="24.0" prefWidth="100.0" text="Event description:">
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </Label>
-                  <JFXTextArea fx:id="eventDescriptionTextArea" prefHeight="101.0" prefWidth="490.0" promptText="eg. lots of text in here." />
-                  <JFXButton fx:id="addTagsButton" alignment="CENTER" contentDisplay="CENTER" onAction="#handleAddTagsButton" prefHeight="35.0" prefWidth="90.0" style="-fx-background-color: #38FFF5;" text="Add Tags">
-                     <VBox.margin>
-                        <Insets left="200.0" right="200.0" top="20.0" />
-                     </VBox.margin>
-                  </JFXButton>
-                  <HBox prefHeight="47.0" prefWidth="409.0">
-                     <children>
-                        <JFXCheckBox prefHeight="44.0" prefWidth="104.0" text="I am the organiser of this event" />
-                        <JFXTextField fx:id="eventOrganiserTextField" promptText="Organiser">
-                           <HBox.margin>
-                              <Insets left="60.0" top="8.0" />
-                           </HBox.margin>
-                        </JFXTextField>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="95.0" prefWidth="490.0">
-                     <children>
-                        <JFXButton fx:id="createNewEventButton" layoutX="76.0" layoutY="-195.0" onAction="#handleCreateEvent" prefHeight="61.0" prefWidth="138.0" text="Create Event" />                     </children>
-                  </HBox>
-               </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </VBox>
             <Label alignment="CENTER" layoutX="375.0" layoutY="50.0" prefHeight="61.0" prefWidth="200.0" text="Create Event">
                <font>
                   <Font name="System Bold" size="22.0" />
@@ -112,5 +25,115 @@
             </Label>
          </children>
       </AnchorPane>
+      <VBox layoutX="241.0" layoutY="127.0" prefHeight="618.0" prefWidth="490.0" spacing="10.0">
+         <children>
+            <Label text="Event name:" />
+            <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
+               <VBox.margin>
+                  <Insets right="90.0" />
+               </VBox.margin>
+            </JFXTextField>
+            <HBox prefHeight="15.0" prefWidth="409.0">
+               <children>
+                  <Label text="Date:" />
+                  <Label text="Time:">
+                     <HBox.margin>
+                        <Insets left="215.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="409.0">
+               <children>
+                  <DatePicker fx:id="eventDatePicker" />
+                  <JFXTextField fx:id="eventTimeTextField" promptText="HH:mm">
+                     <HBox.margin>
+                        <Insets left="70.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+            </HBox>
+            <HBox prefHeight="16.0" prefWidth="409.0">
+               <children>
+                  <Label prefHeight="30.0" prefWidth="138.0" text="City:" />
+                  <Label prefHeight="27.0" prefWidth="86.0" text="Country:">
+                     <HBox.margin>
+                        <Insets left="110.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="27.0" prefWidth="409.0">
+               <children>
+                  <JFXTextField fx:id="eventCityTextField" promptText="eg. Copenhagen" />
+                  <JFXTextField fx:id="eventCountryTextField" promptText="eg. Denmark">
+                     <HBox.margin>
+                        <Insets left="110.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+            </HBox>
+            <Label prefHeight="24.0" prefWidth="100.0" text="Event description:">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Label>
+            <JFXTextArea fx:id="eventDescriptionTextArea" prefHeight="101.0" prefWidth="490.0" promptText="eg. lots of text in here." />
+            <VBox>
+               <children>
+                  <HBox prefHeight="14.0" prefWidth="490.0">
+                     <children>
+                        <Label text="Minimum participants:" />
+                        <VBox prefHeight="27.0" prefWidth="125.0" />
+                        <Label text="Maximum participant:s:" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="55.0" prefWidth="490.0">
+                     <children>
+                        <JFXTextField fx:id="minimumParticipantsTextField" prefHeight="25.0" prefWidth="140.0" promptText="eg. 4" />
+                        <VBox prefHeight="31.0" prefWidth="105.0" />
+                        <JFXTextField fx:id="maximumParticipantsTextField" prefHeight="25.0" prefWidth="139.0" promptText="eg. 10" />
+                     </children>
+                  </HBox>
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </VBox>
+            <HBox prefHeight="47.0" prefWidth="409.0">
+               <children>
+                  <JFXCheckBox prefHeight="44.0" prefWidth="104.0" text="I am the organiser of this event" />
+                  <VBox prefHeight="33.0" prefWidth="56.0" />
+                  <JFXTextField fx:id="eventOrganiserTextField" prefHeight="21.0" prefWidth="135.0" promptText="Organiser">
+                     <HBox.margin>
+                        <Insets top="8.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <JFXButton fx:id="addTagsButton" alignment="CENTER" contentDisplay="CENTER" onAction="#handleAddTagsButton" prefHeight="35.0" prefWidth="90.0" style="-fx-background-color: #38FFF5;" text="Add Tags">
+               <VBox.margin>
+                  <Insets left="200.0" right="200.0" top="20.0" />
+               </VBox.margin>
+            </JFXButton>
+            <HBox alignment="CENTER" prefHeight="95.0" prefWidth="490.0">
+               <children>
+                  <JFXButton fx:id="createNewEventButton" onAction="#handleCreateEvent" prefHeight="61.0" prefWidth="138.0" style="-fx-background-color: #41FF31;" text="Create Gathering" />
+               </children>
+            </HBox>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </VBox>
    </children>
 </AnchorPane>
