--- a/src/main/resources/com/group/p2_socializer/style.css
+++ b/src/main/resources/com/group/p2_socializer/style.css
@@ -32,3 +32,10 @@
     -fx-background-color: rgba(0, 0, 0, 0.2);
     -fx-transition: background-color 0.7s ease;
 }
+.circle-checkbox.box {
+    -fx-background-radius: 50%;
+}
+
+.circle-checkbox.mark {
+    -fx-background-radius: 50%;
+}
