--- a/src/main/resources/com/group/p2_socializer/event_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/event_page.fxml
@@ -56,8 +56,8 @@
                               <Font name="System Bold" size="21.0" />
                            </font>
                         </Label>
-                        <JFXButton layoutX="190.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #71FF60;" text="Attend Event" wrapText="true" />
-                        <JFXButton layoutX="66.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #E2FF71;" text="Interested" wrapText="true" />
+                        <JFXButton fx:id="attendEventButton" layoutX="190.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #71FF60;" text="Attend Event" wrapText="true" />
+                        <JFXButton fx:id="interestedButton" layoutX="66.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #E2FF71;" text="Interested" wrapText="true" />
                      </children>
                   </AnchorPane>
                </center>
