--- a/src/main/resources/com/group/p2_socializer/gathering_item.fxml
+++ b/src/main/resources/com/group/p2_socializer/gathering_item.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox onMouseClicked="#onGatheringClicked" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateGatherings.GatheringItemController">
+<VBox fx:id="gatheringItemVBox" onMouseClicked="#onGatheringClicked" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateGatherings.GatheringItemController">
    <children>
       <ImageView fitHeight="168.0" fitWidth="672.0">
          <image>
