--- a/src/main/resources/com/group/p2_socializer/style.css
+++ b/src/main/resources/com/group/p2_socializer/style.css
@@ -18,7 +18,7 @@
     -fx-background-color: lightgray; /* Change the background color on hover */
     -fx-cursor: hand; /* Change the cursor to a hand pointer on hover */
     -fx-background-color: rgba(0, 0, 0, 0.2); /* Use an rgba value for the background color with alpha (opacity) set to 0.2 for a faded effect */
-    -fx-transition: background-color 0.7s ease; /* Add a transition effect with a duration of 0.3s and an ease timing function for a smooth effect */
+    -fx-transition: background-color 0.7s ease;
 }
 #preDefinedGatheringVBox:hover {
     -fx-background-color: lightgray;
@@ -32,10 +32,10 @@
     -fx-background-color: rgba(0, 0, 0, 0.2);
     -fx-transition: background-color 0.7s ease;
 }
-.circle-checkbox.box {
-    -fx-background-radius: 50%;
-}
 
-.circle-checkbox.mark {
-    -fx-background-radius: 50%;
+#gatheringItemVBox:hover {
+    -fx-background-color: lightgray;
+    -fx-cursor: hand;
+    -fx-background-color: rgba(0, 0, 0, 0.2);
+    -fx-transition: background-color 0.7s ease;
 }
