added maximum and minimum participants, not finished

--- a/src/main/resources/com/group/p2_socializer/gathering_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/gathering_page.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -22,18 +23,18 @@
                <center>
                   <AnchorPane fx:id="centerPane" BorderPane.alignment="CENTER">
                      <children>
-                        <JFXButton fx:id="attendGatheringButton" layoutX="189.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #71FF60;" text="Attend Gathering" wrapText="true" />
+                        <JFXButton fx:id="attendGatheringButton" layoutX="162.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #71FF60;" text="Attend Gathering" wrapText="true" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="285.0" layoutX="368.0" layoutY="445.0" stroke="BLACK" strokeType="INSIDE" width="226.0" />
                         <JFXTextArea layoutX="369.0" layoutY="730.0" prefHeight="35.0" prefWidth="227.0" promptText="Chat" />
-                        <VBox fx:id="eventInfoVBox" layoutX="36.0" layoutY="312.0" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="26.0">
+                        <VBox fx:id="gatheringInfoVBox" layoutX="36.0" layoutY="312.0" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="26.0">
                            <children>
-                              <Label fx:id="eventDateLabel" text="Label" />
-                              <Label fx:id="eventTitleLabel" maxWidth="558" text="Label" />
-                              <Label fx:id="eventLocationLabel" text="Label" />
+                              <Label fx:id="gatheringDateLabel" text="Label" />
+                              <Label fx:id="gatheringTitleLabel" maxWidth="558" text="Label" />
+                              <Label fx:id="gatheringLocationLabel" text="Label" />
                               <HBox fx:id="organiserHBox" prefWidth="534.0">
                                  <children>
-                                    <Label fx:id="byLabel" text="Label" />
-                                    <Label fx:id="eventOrganiserLabel" text="Label" />
+                                    <Label fx:id="gathierngCityLabel" text="Label" />
+                                    <Label fx:id="gatheringOrganiserLabel" text="Label" />
                                  </children>
                               </HBox>
 
@@ -47,12 +48,20 @@
                               <Font name="System Bold" size="21.0" />
                            </font>
                         </Label>
-                        <JFXButton fx:id="interestedButton" layoutX="65.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #E2FF71;" text="Interested" wrapText="true" />
+                        <JFXButton fx:id="interestedButton" layoutX="38.0" layoutY="412.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" style="-fx-background-color: #E2FF71;" text="Interested" wrapText="true" />
                         <ImageView fitHeight="279.0" fitWidth="564.0" layoutX="34.0" layoutY="29.0">
                            <image>
                               <Image url="@pictures/festivalpic.png" />
                            </image>
                         </ImageView>
+                        <Label fx:id="gatheringParticipationLabel" layoutX="286.0" layoutY="418.0" text="23/50">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                           <graphic>
+                              <MaterialIconView glyphName="GROUP" />
+                           </graphic>
+                        </Label>
                      </children>
                   </AnchorPane>
                </center>
