--- a/src/main/resources/com/group/p2_socializer/create_event.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_event.fxml
@@ -18,6 +18,7 @@
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="780.0" prefWidth="950.0">
          <children>
             <Rectangle arcHeight="50" arcWidth="50.0" fill="TRANSPARENT" height="697.0" layoutX="209.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" style="-fx-stroke: #00bcd4;" width="533.0" />
+            <JFXButton fx:id="backButton" onAction="#handleBackButton" layoutX="787.0" layoutY="56.0" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: RED;" text="Back to calendar" />
             <Label alignment="CENTER" layoutX="375.0" layoutY="50.0" prefHeight="61.0" prefWidth="200.0" text="Create Event">
                <font>
                   <Font name="System Bold" size="22.0" />
