--- a/src/main/resources/com/group/p2_socializer/gathering_item.fxml
+++ b/src/main/resources/com/group/p2_socializer/gathering_item.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -38,10 +39,13 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="attendingLabel" prefHeight="17.0" prefWidth="204.0" text="23/50 attending">
+                  <Label fx:id="attendingLabel" prefHeight="17.0" prefWidth="204.0" text="23/50">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" />
                      </VBox.margin>
+                     <graphic>
+                        <MaterialIconView glyphName="GROUP" />
+                     </graphic>
                   </Label>
                </children>
             </VBox>
