--- a/src/main/resources/com/group/p2_socializer/create_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_gathering.fxml
@@ -19,7 +19,7 @@
       <VBox layoutX="231.0" layoutY="117.0" prefHeight="618.0" prefWidth="490.0" spacing="10.0">
          <children>
             <Label text="Event name:" />
-            <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
+            <JFXTextField fx:id="gatheringNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
                <VBox.margin>
                   <Insets right="90.0" />
                </VBox.margin>
@@ -62,8 +62,8 @@
             </HBox>
             <HBox prefHeight="27.0" prefWidth="409.0">
                <children>
-                  <JFXTextField fx:id="eventCityTextField" promptText="eg. Copenhagen" />
-                  <JFXTextField fx:id="eventCountryTextField" promptText="eg. Denmark">
+                  <JFXTextField fx:id="gatheringCityTextField" promptText="eg. Copenhagen" />
+                  <JFXTextField fx:id="gatheringCountryTextField" promptText="eg. Denmark">
                      <HBox.margin>
                         <Insets left="110.0" />
                      </HBox.margin>
@@ -75,7 +75,7 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </Label>
-            <JFXTextArea fx:id="eventDescriptionTextArea" prefHeight="101.0" prefWidth="490.0" promptText="eg. lots of text in here." />
+            <JFXTextArea fx:id="gatheringDescriptionTextArea" prefHeight="101.0" prefWidth="490.0" promptText="eg. lots of text in here." />
             <VBox>
                <children>
                   <HBox prefHeight="14.0" prefWidth="490.0">
@@ -101,7 +101,7 @@
                <children>
                   <JFXCheckBox prefHeight="44.0" prefWidth="104.0" text="I am the organiser of this event" />
                   <VBox prefHeight="33.0" prefWidth="56.0" />
-                  <JFXTextField fx:id="eventOrganiserTextField" prefHeight="21.0" prefWidth="135.0" promptText="Organiser">
+                  <JFXTextField fx:id="gatheringOrganiserTextField" prefHeight="21.0" prefWidth="135.0" promptText="Organiser">
                      <HBox.margin>
                         <Insets top="8.0" />
                      </HBox.margin>
