--- a/src/main/resources/com/group/p2_socializer/create_predefined_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_predefined_gathering.fxml
@@ -33,7 +33,7 @@
                   <VBox layoutX="63.0" prefHeight="561.0" prefWidth="623.0" spacing="10.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
                      <children>
                         <Label text="Event name:" />
-                        <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
+                        <JFXTextField fx:id="gatheringNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
                            <VBox.margin>
                               <Insets right="90.0" />
                            </VBox.margin>
@@ -76,8 +76,8 @@
                         </HBox>
                         <HBox prefHeight="27.0" prefWidth="409.0">
                            <children>
-                              <JFXTextField fx:id="eventCityTextField" promptText="eg. Copenhagen" />
-                              <JFXTextField fx:id="eventCountryTextField" promptText="eg. Denmark">
+                              <JFXTextField fx:id="gatheringCityTextField" promptText="eg. Copenhagen" />
+                              <JFXTextField fx:id="gatheringCountryTextField" promptText="eg. Denmark">
                                  <HBox.margin>
                                     <Insets left="110.0" />
                                  </HBox.margin>
@@ -89,11 +89,11 @@
                               <Insets top="20.0" />
                            </VBox.margin>
                         </Label>
-                        <JFXTextArea fx:id="eventDescriptionTextArea" prefHeight="135.0" prefWidth="409.0" promptText="eg. lots of text in here." />
+                        <JFXTextArea fx:id="gatheringDescriptionTextArea" prefHeight="135.0" prefWidth="409.0" promptText="eg. lots of text in here." />
                         <HBox prefHeight="47.0" prefWidth="409.0">
                            <children>
                               <JFXCheckBox prefHeight="44.0" prefWidth="104.0" text="I am the organiser of this event" />
-                              <JFXTextField fx:id="eventOrganiserTextField" promptText="Organiser">
+                              <JFXTextField fx:id="gatheringOrganiserTextField" promptText="Organiser">
                                  <HBox.margin>
                                     <Insets left="60.0" top="8.0" />
                                  </HBox.margin>
