--- a/src/main/resources/com/group/p2_socializer/profileGatheringItem.fxml
+++ b/src/main/resources/com/group/p2_socializer/profileGatheringItem.fxml
@@ -13,7 +13,7 @@
          <children>
             <VBox>
                <children>
-                  <Label fx:id="profileGatheringTitleLabel" prefHeight="48.0" prefWidth="329.0" text="Gantering title">
+                  <Label fx:id="profileGatheringTitleLabel" prefHeight="48.0" prefWidth="329.0" text="Gathering title">
                      <font>
                         <Font size="18.0" />
                      </font>
